welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:5: error: not found: value isMum
		if (isMum)
                    ^