welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {

if (!isAsleep)
	if (isMorning)
		if (isMum)
			return true
		else return false
	else return true

else return false

}